--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.3",
-    "@angular/cli": "~14.2.3",
+    "@angular/cli": "^14.2.4",
     "@angular/compiler-cli": "~14.2.3",
     "@ngrx/store-devtools": "^10.0.0",
     "@types/jasmine": "~3.6.0",
