--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@angular/core": "^14.2.3",
     "postcss": "^8.4.31",
     "tough-cookie": "^4.1.3",
-    "xml2js": "^0.6.2"
+    "xml2js": "^0.6.2",
+    "babel-plugin-polyfill-corejs3": "0.8.6"
   }
 }
