--- a/package.json
+++ b/package.json
@@ -85,6 +85,8 @@
     "postcss": "^8.4.31",
     "tough-cookie": "^4.1.3",
     "xml2js": "^0.6.2",
-    "babel-plugin-polyfill-corejs3": "0.8.6"
+    "babel-plugin-polyfill-corejs3": "0.8.6",
+    "babel-plugin-polyfill-corejs2": "0.4.6",
+    "babel-plugin-polyfill-regenerator": "0.5.3"
   }
 }
